objects/BW_Application_Result__c.object
<CustomObject>
    <description>Bluewolf Application Results</description>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Date and time the application completed it&apos;s run</description>
        <label>Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>(Completed_Date_Time__c  -  CreatedDate ) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Percent__c</fullName>
        <description>The error percentage.
If the result contains the word &quot;error&quot; and there are 0 records processed, the error percent is not calculated and automatically set to 100</description>
        <formula>IF (CONTAINS(UPPER(Result__c), &quot;ERROR&quot;) ,

IF (Total_Records__c &gt; 0, Total_Errors__c /  Total_Records__c, 1),

IF (Total_Records__c &gt; 0, Total_Errors__c /  Total_Records__c, 0)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Application result</description>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Percent__c</fullName>
        <description>The success percentage</description>
        <formula>1 -  Error_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Application result summary</description>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Errors__c</fullName>
        <description>The total number of record errors</description>
        <label>Total Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <description>The total number of records processed</description>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BW Application Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Result__c</columns>
        <columns>Success_Percent__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <columns>Elapsed_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>some_release_queue_BW_Application_Result</fullName>
        <filterScope>Queue</filterScope>
        <label>some_release_queue</label>
        <queue>some_release_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BW Application Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>